--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">View</string>
+    <string name="app_name">画面部品サンプル</string>
+    <string name="tv_mag">名前を入力してください。</string>
 </resources>
