--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">画面部品サンプル</string>
     <string name="tv_mag">名前を入力してください。</string>
+    <string name="bt_save">保存</string>
+    <string name="cb_drink">drink</string>
+    <string name="cb_food">food</string>
 </resources>
